# OptimalControl

./: .gitignore  CMakeLists.txt  README.md
scripts/: plot_results.py
